--- a/src/index.css
+++ b/src/index.css
@@ -233,11 +233,10 @@ figure.snip1157 * {
 
 figure.snip1157 img {
   max-width: 100%;
-  vertical-align: middle;
-  height: 90px;
-  width: 90px;
-  border-radius: 50%;
-  margin: 40px 0 0 10px;
+  /* vertical-align: middle; */
+
+  /* margin: 40px 0 0 10px; */
+  @apply size-[90px] rounded-full
 }
 
 figure.snip1157 blockquote {
@@ -354,11 +353,13 @@ figure.snip1157 .author h5 span {
   cursor: not-allowed;
 }
 
-.custom-pagination-hero .swiper-pagination-bullet {
+.custom-pagination-hero .swiper-pagination-bullet,.custom-pagination-testimonial .swiper-pagination-bullet {
   @apply bg-transparent border-primary-color cursor-pointer border-2 !size-4;
 }
 
-.custom-pagination-hero .swiper-pagination-bullet.swiper-pagination-bullet-active {
+.custom-pagination-hero .swiper-pagination-bullet.swiper-pagination-bullet-active,
+.custom-pagination-testimonial .swiper-pagination-bullet.swiper-pagination-bullet-active
+{
   @apply bg-primary-color
 }
 
