--- a/src/index.css
+++ b/src/index.css
@@ -488,3 +488,60 @@ section {
 /* .transform-3d {
   @apply [transform:rotateX(15deg) translateZ(80px)];
 } */
+.slicer-slider {
+  position: relative;
+  overflow: hidden;
+}
+
+.slice {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  transition: transform 0.4s ease-in-out;
+}
+
+.slice:hover {
+  transform: scale(1.05);
+}
+
+.slice:nth-child(1) {
+  clip-path: polygon(0 0, 12.5% 0, 10% 100%, 0% 100%);
+  left: 0;
+}
+
+.slice:nth-child(2) {
+  clip-path: polygon(12.5% 0, 25% 0, 22.5% 100%, 10% 100%);
+  left: 10px;
+}
+
+.slice:nth-child(3) {
+  clip-path: polygon(25% 0, 37.5% 0, 35% 100%, 22.5% 100%);
+  left: 20px;
+}
+
+.slice:nth-child(4) {
+  clip-path: polygon(37.5% 0, 50% 0, 47.5% 100%, 35% 100%);
+  left: 30px;
+}
+
+.slice:nth-child(5) {
+  clip-path: polygon(50% 0, 62.5% 0, 60% 100%, 47.5% 100%);
+  left: 40px;
+}
+
+.slice:nth-child(6) {
+  clip-path: polygon(62.5% 0, 75% 0, 72.5% 100%, 60% 100%);
+  left: 50px;
+}
+
+.slice:nth-child(7) {
+  clip-path: polygon(75% 0, 87.5% 0, 85% 100%, 72.5% 100%);
+  left: 60px;
+}
+
+.slice:nth-child(8) {
+  clip-path: polygon(87.5% 0, 100% 0, 100% 100%, 85% 100%);
+  left: 70px;
+}
